# DyImage

./: .gitignore  README.md
.github/workflows/: release.yml
.omo/plans/: optimize-webp2gif.md
app/: build.gradle.kts
app/schemas/hua.dy.image.db.DyImageDataBase/: 1.json  2.json  3.json
app/src/main/: AndroidManifest.xml
app/src/main/aidl/hua/dy/image/service/: IFileExplorerService.aidl
app/src/main/cpp/: CMakeLists.txt  gif.h  jni_bridge.cpp  webp2gif.cpp  webp2gif.h
app/src/main/java/hua/dy/image/: MainActivity.kt
app/src/main/java/hua/dy/image/bean/: FileBean.kt  ImageBean.kt
app/src/main/java/hua/dy/image/data/: AppPreferences.kt
app/src/main/java/hua/dy/image/data/repository/: ImageRepository.kt
app/src/main/java/hua/dy/image/data/settings/: AppSettingsStore.kt
app/src/main/java/hua/dy/image/db/: DyImageDao.kt  DyImageDataBase.kt  ScanPathDao.kt  ScanPathEntity.kt  ScanSchemeDao.kt  ScanSchemeEntity.kt
app/src/main/java/hua/dy/image/feature/gallery/: GalleryFileOps.kt  GalleryScreen.kt  GalleryViewModel.kt  ShareImageDialog.kt
app/src/main/java/hua/dy/image/feature/paths/: PathConfigScreen.kt  PathConfigViewModel.kt
app/src/main/java/hua/dy/image/service/: FileExploreService.kt
app/src/main/java/hua/dy/image/ui/: DyImageApp.kt
app/src/main/java/hua/dy/image/utils/: FileExplorerServiceManager.kt  FileTypeChecker.kt  PathUtils.kt  SharedUtils.kt  Webp2GifUtils.kt  X2GifUtils.kt
app/src/main/res/values/: strings.xml
app/src/main/res/xml/: file_paths.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+7 files in other folders)
